<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_show_single_record"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".provider.crud.ShowSingleRecordActivity"
    android:background="#FF5722"
    android:orientation="vertical">

    <TextView
        android:text="@string/textName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#fff"
        android:textSize="20sp"
        android:id="@+id/textName"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#FF5722"
        android:textSize="20sp"
        android:id="@+id/textNameSee"
        android:background="#fff"
        android:layout_marginTop="10dp"
        android:padding="10dp"/>

    <TextView
        android:text="@string/textPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#fff"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:id="@+id/textPhone" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#FF5722"
        android:textSize="20sp"
        android:id="@+id/textPhoneSee"
        android:background="#fff"
        android:layout_marginTop="10dp"
        android:padding="10dp" />

    <TextView
        android:text="@string/textEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#fff"
        android:textSize="20sp"
        android:id="@+id/textEmail"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#FF5722"
        android:textSize="20sp"
        android:id="@+id/textEmailSee"
        android:background="#fff"
        android:layout_marginTop="10dp"
        android:padding="10dp"/>

    <Button
        android:text="@string/edit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:id="@+id/buttonUpdate" />

</LinearLayout>