<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loginlike"
                android:layout_gravity="center_horizontal"
                android:textSize="18sp"
                android:padding="20dp"
                android:textColor="@color/maintText"/>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/btnProvider"
                android:text="@string/provider"
                android:layout_marginTop="30dp"
                android:textSize="15sp"
                android:background="@drawable/buttons"
                android:textColor="@drawable/textbutton"
                android:padding="15dp"
                android:layout_margin="5dp"
                style="?android:attr/borderlessButtonStyle"
                android:fontFamily="sans-serif-light"/>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/btnUser"
                android:text="@string/user"
                android:textSize="15sp"
                android:background="@drawable/buttons"
                android:textColor="@drawable/textbutton"
                android:padding="15dp"
                android:layout_margin="5dp"
                style="?android:attr/borderlessButtonStyle"
                android:fontFamily="sans-serif-light"/>
        </TableRow>
    </TableLayout>
</LinearLayout>